--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,7 +34,7 @@ exec-once = ~/.config/hyprland_rice/hooks/autostart_pre
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Notifications
-exec-once = mako -c ~/.config/hypr/configs/mako/config
+exec-once = mako -c ~/.config/mako/config
 
 # Wallpaper
 exec-once = hyprpaper
@@ -43,7 +43,7 @@ exec-once = hyprpaper
 exec-once = nm-applet
 
 # Bar
-exec-once = ~/.config/hypr/configs/waybar/start.sh
+exec-once = ~/.config/waybar/start.sh
 
 exec-once = ~/.config/hyprland_rice/hooks/autostart_post
 
